--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -82,8 +82,8 @@
     "postinstall": "node ./.setup.js",
     "lint": "eslint --max-warnings 0 \"**/*.{js,ts}\" && solhint --max-warnings 0 \"src/**/*.sol\"",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix \"src/**/*.sol\"",
-    "format": "prettier --check \"**/*.{ts,js,sol}\"",
-    "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
+    "format": "prettier --check \"**/*.{ts,js,sol.md}\"",
+    "format:fix": "prettier --write \"**/*.{ts,js,sol.md}\"",
     "test": "dotenv -- cross-env NODE_OPTIONS=\"--max-old-space-size=8192 node --unhandled-rejections=strict\" HARDHAT_COMPILE=true NODE_ENV=test hardhat test",
     "test:single": "dotenv -- cross-env NODE_OPTIONS=\"--max-old-space-size=4096 --unhandled-rejections=strict\" HARDHAT_COMPILE=true NODE_ENV=test mocha --bail --recursive test",
     "gas": "dotenv -- cross-env REPORT_GAS=true NODE_OPTIONS=\"--max-old-space-size=4096 --unhandled-rejections=strict\" hardhat test",
