--- a/packages/asset/package.json
+++ b/packages/asset/package.json
@@ -49,7 +49,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.0",
-    "@openzeppelin/contracts-upgradeable": "^4.9.0"
+    "@openzeppelin/contracts-upgradeable": "^4.9.0",
+    "@sandbox-smart-contracts/dependency-metatx": "*",
+    "@sandbox-smart-contracts/dependency-operator-filter": "*",
+    "@sandbox-smart-contracts/dependency-royalty-management": "*"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
@@ -63,9 +66,6 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@sandbox-smart-contracts/dependency-metatx": "*",
-    "@sandbox-smart-contracts/dependency-operator-filter": "*",
-    "@sandbox-smart-contracts/dependency-royalty-management": "*",
     "@typechain/ethers-v5": "^10.2.1",
     "@typechain/hardhat": "^6.1.6",
     "@types/chai": "^4.3.5",
