--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -16,6 +16,7 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@release-it/keep-a-changelog": "^4.0.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.3.6",
@@ -35,6 +36,7 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
+    "release-it": "^16.2.1",
     "solhint": "^3.6.2",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.8.3",
@@ -51,7 +53,24 @@
     "coverage": "hardhat coverage --testfiles 'test/*.ts''test/*.js'",
     "analyze": "slither .",
     "hardhat": "hardhat",
-    "compile": "hardhat compile"
+    "compile": "hardhat compile",
+    "release": "release-it"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: @sandbox-smart-contracts/marketplace release v${version}",
+      "tagAnnotation": "@sandbox-smart-contracts/marketplace release v${version}",
+      "tagName": "@sandbox-smart-contracts/marketplace@v${version}"
+    },
+    "plugins": {
+      "@release-it/keep-a-changelog": {}
+    },
+    "hooks": {
+      "before:init": [
+        "yarn lint",
+        "yarn test"
+      ]
+    }
   },
   "author": "",
   "license": "ISC",
