--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/example-foundry/lib/forge-std"]
 	path = packages/example-foundry/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "packages/example-foundry/lib/openzeppelin-contracts"]
+	path = packages/example-foundry/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
