--- a/packages/example-foundry/foundry.toml
+++ b/packages/example-foundry/foundry.toml
@@ -2,5 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [ "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
+"@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+"ds-test/=lib/forge-std/lib/ds-test/src/",
+"erc4626-tests/=lib/openzeppelin-contracts-upgradeable/lib/erc4626-tests/",
+"forge-std/=lib/forge-std/src/",
+"openzeppelin-contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/",
+"openzeppelin-contracts/=lib/openzeppelin-contracts/"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
