--- a/packages/example-foundry/foundry.toml
+++ b/packages/example-foundry/foundry.toml
@@ -1,10 +1,10 @@
 [profile.default]
 src = "src"
-out = "out"
+out = "artifacts"
 libs = ["lib"]
 remappings = [
-    "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@openzeppelin/contracts-upgradeable/=node_modules/@openzeppelin/contracts-upgradeable/contracts/",
+    "@openzeppelin/contracts/=node_modules/@openzeppelin/contracts/contracts/",
     "ds-test/=lib/forge-std/lib/ds-test/src/",
     "erc4626-tests/=lib/openzeppelin-contracts-upgradeable/lib/erc4626-tests/",
     "forge-std/=lib/forge-std/src/",
