--- a/packages/example-foundry/foundry.toml
+++ b/packages/example-foundry/foundry.toml
@@ -9,4 +9,19 @@ remappings = [
     "forge-std/=lib/forge-std/src/",
 ]
 
+# OPTIMIZER SETTINGS
+optimizer = true
+optimizer_runs = 200
+
+# RPC SETTINGS
+
+[rpc_endpoints]
+default = "http://localhost:8545"
+mumbai = "https://rpc-mumbai.maticvigil.com/"
+
+# ETHERSCAN SETTINGS
+
+[etherscan]
+mumbai = { key = "YOUR_API_KEY_HERE" }
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
